<resources>
    <string name="app_name">My GitHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_logo">app logo</string>
    <string name="id_hint">ID를 입력해주세요</string>
    <string name="pw_hint">비밀번호를 입력해주세요</string>
    <string name="name_hint">이름 입력해주세요</string>
    <string name="sign_in_btn_login">login</string>
    <string name="sign_in_txt_no_id">계정이 없으신가요?</string>
    <string name="sign_in_txt_sign_up">회원가입</string>
    <string name="sign_up_btn_sign_up">join</string>
    <string name="sign_up_txt_name">이름</string>
    <string name="sign_up_txt_id">Github 아이디</string>
    <string name="sign_up_txt_pw">비밀번호</string>
    <string name="sign_in_txt_id">Github 아이디</string>
    <string name="sign_in_txt_pw">비밀번호</string>
    <string name="item_rcv_repo_title">레포지토리 이름</string>
    <string name="item_rcv_repo_info">레포지토리 설명</string>
    <string name="item_rcv_repo_language">언어</string>
    <string name="home_profile_info">슬리데린 최고 마법사</string>
    <string name="home_profile_name">Yunjoo Son</string>
    <string name="home_profile_id">yjooooo</string>
    <string name="sign_up_title">회원가입</string>
    <string name="user_btn_introduce">introduce</string>
    <string name="user_btn_following">follow, follower</string>
    <string name="user_btn_organization">organization</string>
    <string name="user_btn_logout">logout</string>
    <string name="organization_txt_title">ORGANIZATION</string>
</resources>